2012-12-02  KyungTae Kim  <ktf.kim@samsung.com>

        [EFL][WK2] Add support for a zoom level setting to MiniBrowser
        https://bugs.webkit.org/show_bug.cgi?id=99285

        Reviewed by Gyuyoung Kim.

         Add support for a zoom level setting to MiniBrowser.
         Shortcuts for setting operations are same as common browsers:
         Ctrl + '+' to zoom in, Ctrl + '-' to zoom out and Ctrl + '0' to zoom to default.

        * MiniBrowser/efl/main.c:
        (on_key_down):

2012-12-02  KyungTae Kim  <ktf.kim@samsung.com>

        [EFL][WK2] ECORE_GETOPT_VALUE_BOOL need to be used for Eina_Bool
        https://bugs.webkit.org/show_bug.cgi?id=103835

        Reviewed by Kentaro Hara.

        Because legacy_behavior_enabled is Eina_Bool, ECORE_GETOPT_VALUE_BOOL need to be used

        * MiniBrowser/efl/main.c:
        (elm_main):

2012-12-02  Mike West  <mkwst@chromium.org>

        Garden-o-matic shouldn't die when blank JSON results are received.
        https://bugs.webkit.org/show_bug.cgi?id=103838

        Reviewed by Adam Barth.

        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/base.js:
            If the JSONP string doesn't contain '(' or ')', return an empty object.
        * BuildSlaveSupport/build.webkit.org-config/public_html/TestFailures/scripts/base_unittests.js:
            Check that this behavior stays in place.

2012-12-02  Eric Seidel  <eric@webkit.org>

        run-perf-tests --profile should use iprofiler instead of instruments on Mac
        https://bugs.webkit.org/show_bug.cgi?id=103765

        Unreviewed.  Updating the unittests after my previous change.

        * Scripts/webkitpy/common/system/profiler_unittest.py:
        (ProfilerFactoryTest.test_basic):

2012-12-02  Julie Parent  <jparent@chromium.org>

        Remove dead code in flakiness dashboard for obsolete buildDir option
        https://bugs.webkit.org/show_bug.cgi?id=103792

        Reviewed by Dirk Pranke.
