@@ -1,3 +1,15 @@
+2012-12-03  KyungTae Kim  <ktf.kim@samsung.com>
+
+        [EFL][WK2] Use float variable for zoom levels for MiniBrowser
+        https://bugs.webkit.org/show_bug.cgi?id=103863
+
+        Reviewed by Gyuyoung Kim.
+
+        Use float instead of int for zoomLevels variables for a clearer expression
+
+        * MiniBrowser/efl/main.c:
+        (on_key_down):
+
 2012-12-02  KyungTae Kim  <ktf.kim@samsung.com>
 
         [EFL][WK2] Add support for a zoom level setting to MiniBrowser
